fix spacing

--- a/main.css
+++ b/main.css
@@ -935,12 +935,11 @@ footer p {
   }
 
   .popup h2 {
-    padding-bottom: 1rem;
     font-size: 32px;
   }
 
   .popup p {
-    font-size: 20px;
+    font-size: 18px;
   }
 
   /* ------------------------ */
